fixed table alignment

--- a/list.css
+++ b/list.css
@@ -45,6 +45,9 @@ a:hover {
     text-decoration: underline; /* Add underline when hovering */
 }
 h1 {
-    text-align: center; /* This centers the text horizontally */
+    text-align: left; /* This centers the text horizontally */
     margin-top: 20px; /* Add some space at the top */
+}
+th, td {
+    text-align: center; /* Center-aligns text in table */
 }
